--- a/views/error/normalError.hbs
+++ b/views/error/normalError.hbs
@@ -3,7 +3,7 @@
         <div class="colorlib-notfound-404">
             <h1 class="colorlib-heading">OOPS</h1>
         </div>
-        <h2 id="colorlib_404_customizer_page_heading" class="colorlib-heading">{{message}} </h2>
+        <h2>{{message}} </h2>
         <p id="colorlib_404_customizer_content"> Something has happen. Your app doesnt
             work correctly.<a href="/" id="colorlib_404_customizer_button_text">
                 Return your homepage</a>
