--- a/views/userInfo/userInfo.hbs
+++ b/views/userInfo/userInfo.hbs
@@ -57,7 +57,7 @@
                     {{#each listKey}}
                     <div class="table-row">
 
-                        <div class="serial">{{id}}</div>
+                        <div class="counterCell serial" style="display: flex;justify-content: center;"></div>
                         <div class="percentage"><input form="updateform{{id}}" type="hidden" name="id"
                                 value={{value}} />{{value}}</div>
                         <input form="renewkey{{id}}" type="hidden" name="idPackage" value={{id_package}}>
