remove element a in button submit statistic

--- a/views/statistic/accessNumber.hbs
+++ b/views/statistic/accessNumber.hbs
@@ -32,8 +32,7 @@
                         <div class="default-select" id="default-select_2" style="display:flex">
                             <form method="GET" action="/admin/accessmanage">
                             <select class="yearOptions" name="year"></select>
-                            <button class="getAccessNumberBtn genric-btn success-border"><a
-                                    class="getAccessNumberLink" type="submit">GET</a></button>
+                            <button type="submit" class="getAccessNumberBtn genric-btn success-border">GET</button>
                             </form>
                         </div>
                     </div>
