--- a/views/statistic/revenue.hbs
+++ b/views/statistic/revenue.hbs
@@ -31,8 +31,7 @@
                             <div class="default-select" id="default-select_2" style="display:flex">
                                 <form method="GET" id="revenue" action="/admin/revenuemanage">
                                 <select class="yearOptions" name="revenueByYear" id="revenueByYear-YearOptions"></select>
-                                <button class="getRevenueByYearBtn genric-btn success-border"><a
-                                        class="getRevenueByYearLink" type="submit">GET</a></button>
+                                <button type="submit" class="getRevenueByYearBtn genric-btn success-border">GET</button>
                                 </form>
                             </div>
                         </div>
@@ -93,8 +92,7 @@
                             <div class="default-select" id="default-select_2" style="display:flex">
                                 <select form="revenue" class="yearOptions"  name="yearByMonth" id="revenueByMonth-YearOptions"></select>
                                 <select form="revenue" class="monthOptions" name="monthByMonth" id="monthByMonth-MonthOptions"></select>
-                                <button form="revenue" class="getRevenueByMonthBtn genric-btn success-border"><a
-                                        class="getRevenueByMonthLink" type="submit">GET</a></button>
+                                <button form="revenue" class="getRevenueByMonthBtn genric-btn success-border" type="submit">GET</button>
                             </div>
 
                         </div>
