fix bug in statistic chart (#19)

--- a/views/partials/adminHeader.hbs
+++ b/views/partials/adminHeader.hbs
@@ -14,7 +14,7 @@
                 <a class="nav-link" href="/admin/accessmanage">Access Manage</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/admin/usermanage/page=1">User Manage</a>
+                <a class="nav-link" href="/admin/usermanage">User Manage</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/admin/revenuemanage">Revenue Manage</a>
