chore: refactor code usermanage and add auth.admin (#21)

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -265,3 +265,14 @@ h2[class="userInfo"] {
   content: counter(tableCount);
   counter-increment: tableCount;
 }
+
+a:not([href]):not([tabindex]){
+  color: white;
+  background: gray;
+  border: 1px solid gray;
+}
+.currentPage{
+  color: #00b4ff;
+  cursor: not-allowed;
+  opacity: 0.8;
+}
