--- a/views/statistic/revenue.hbs
+++ b/views/statistic/revenue.hbs
@@ -28,7 +28,7 @@
                         <div class="single-element-widget mt-30">
                             <div class="default-select" id="default-select_2" style="display:flex">
                                 <form method="GET" id="revenue" action="/admin/revenuemanage">
-                                <select class="yearOptions" name="revenueByYear" id="revenueByYear-YearOptions"></select>
+                                <select class="yearOptions" name="revenueByYear" id="ByYear"></select>
                                 <button type="submit" class="getRevenueByYearBtn genric-btn success-border">GET</button>
                                 </form>
                             </div>
